--- a/TeduShop.Web/Views/Admin/Index.cshtml
+++ b/TeduShop.Web/Views/Admin/Index.cshtml
@@ -5,16 +5,12 @@
 
 <!DOCTYPE html>
 
-<html ng-app="myModule">
+<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <script src="~/wwwroot/lib/angular/angular.js"></script>
-    <script src="~/Scripts/spa/app.js"></script>
 </head>
 <body>
-    <div ng-controller="myController">
-        {{message}}
-    </div>
+
 </body>
 </html>
